--- a/Place Holder/Packages/manifest.json
+++ b/Place Holder/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.2d.animation": "10.1.4",
+    "com.unity.2d.psdimporter": "9.0.3",
     "com.unity.cinemachine": "3.1.2",
     "com.unity.collab-proxy": "2.5.2",
     "com.unity.feature.cinematic": "1.0.0",
